--- a/k8s/app/supabase/templates/service.yaml
+++ b/k8s/app/supabase/templates/service.yaml
@@ -14,7 +14,7 @@ spec:
       protocol: TCP
       name: tcp
   selector:
-    app.kubernetes.io/name: supabase-postgres
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -35,7 +35,7 @@ spec:
       protocol: TCP
       name: tcp
   selector:
-    app.kubernetes.io/name: supabase-supavisor
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -56,7 +56,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-auth
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -77,7 +77,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-rest
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -98,7 +98,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-realtime
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -119,7 +119,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-storage
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -140,7 +140,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-imgproxy
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -161,7 +161,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-meta
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -182,7 +182,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-functions
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -203,7 +203,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-analytics
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -228,7 +228,7 @@ spec:
       protocol: TCP
       name: https
   selector:
-    app.kubernetes.io/name: supabase-kong
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
@@ -249,7 +249,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: supabase-studio
+    app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
 ---
 {{- end }}
