--- a/k8s/app/supabase/docker-compose/.env
+++ b/k8s/app/supabase/docker-compose/.env
@@ -33,7 +33,7 @@ POOLER_DEFAULT_POOL_SIZE=20
 # Maximum number of client connections Supavisor accepts per pool
 POOLER_MAX_CLIENT_CONN=100
 # Unique tenant identifier
-POOLER_TENANT_ID=your-tenant-id
+POOLER_TENANT_ID=k8s
 # Pool size for internal metadata storage used by Supavisor
 # This is separate from client connections and used only by Supavisor itself
 POOLER_DB_POOL_SIZE=5
