--- a/k8s/app/supabase/templates/ingress.yaml
+++ b/k8s/app/supabase/templates/ingress.yaml
@@ -50,5 +50,5 @@ spec:
               service:
                 name: supabase-studio
                 port:
-                  number: 3000
+                  number: {{ .Values.studio.service.port }}
 {{- end }}
